# ComfyUI-InstantX-IPAdapter-SD3

./: README.md  nodes.py  pyproject.toml  requirements.txt
models/: jointblock.py  resampler.py
workflows/: SD3.5L IP-Adapter.json
